--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,11 @@
       <version>1.0.0-beta4</version>
     </dependency>
     <dependency>
+      <groupId>org.mapdb</groupId>
+      <artifactId>mapdb</artifactId>
+      <version>3.1.0</version>
+    </dependency>
+    <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
       <version>1.5.13</version>
