--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,10 @@
     </dependency>
     <dependency>
       <groupId>dev.langchain4j</groupId>
+      <artifactId>langchain4j-document-parser-apache-tika</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>dev.langchain4j</groupId>
       <artifactId>langchain4j-community-duckdb</artifactId>
       <version>1.0.0-beta4</version>
     </dependency>
