--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,12 @@
       <groupId>dev.langchain4j</groupId>
       <artifactId>langchain4j-web-search-engine-google-custom</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>dev.langchain4j</groupId>
+      <artifactId>langchain4j-experimental-sql</artifactId>
+    </dependency>
+
     <dependency>
       <groupId>org.jsoup</groupId>
       <artifactId>jsoup</artifactId>
